--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">Flashcards</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_flashcards">FlashcardsActivity</string>
+    <string name="delete">Delete</string>
+    <string name="add">Add</string>
+    <string name="name">Name</string>
+    <string name="description">Description</string>
 </resources>
